<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_OPCUA_NodeVariablePair_BOOL" Id="{4aab61c0-be58-40b2-9d49-f114760d457e}">
    <Declaration><![CDATA[TYPE ST_OPCUA_NodeVariablePair_BOOL :
STRUCT
	clientVariable : BOOL;
	clientVariableInfo : __SYSTEM.VAR_INFO;
	serverNodeIdentifier : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>